<resources>
    <string name="app_name">ColourMyViews</string>
    <string name="box_one_text">Box One</string>
    <string name="box_two_text">Box Two</string>
    <string name="box_three_text">Box Three</string>
    <string name="box_four_text">Box Four</string>
    <string name="box_five_text">Box Five</string>
    <string name="how_to_play">How to Play</string>
    <string name="instructions">Tap the screen and the buttons to play.</string>
    <string name="box_three_butt">Box 3 Control</string>
    <string name="box_four_butt">Box 4 Control</string>
    <string name="box_five_butt">Box 5 Control</string>
</resources>
